创建支付子应用及建表

--- a/front_end_pc/index.html
+++ b/front_end_pc/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="/js/axios-0.18.0.min.js"></script>
     <script type="text/javascript" src="/js/jquery-1.12.4.min.js"></script>
     <script type="text/javascript" src="/js/slide.js"></script>
+    <link rel="shortcut icon" href="images/favicon.ico">
 </head>
 <body>
     <div id="app" v-cloak>
